--- a/EVMS_BE/.env
+++ b/EVMS_BE/.env
@@ -2,3 +2,8 @@
 NODE_ENV=development
 MONGODB_URI=mongodb+srv://swp391_group5:majLVQxiHIyHqbKs123@cluster0.t63ztso.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=evms
+NODE_ENV=development
+MONGODB_URI=mongodb+srv://swp391_group5:majLVQxiHIyHqbKs123@cluster0.t63ztso.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=evms
+JWT_SECRET=dev-secret-123
+JWT_EXPIRES_IN=1d
