--- a/EVMS_BE/tsconfig.json
+++ b/EVMS_BE/tsconfig.json
@@ -1,8 +1,8 @@
 ﻿{
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
