--- a/EVMS_FE/.env
+++ b/EVMS_FE/.env
@@ -1,2 +1,3 @@
 VITE_BASE_API_URL = http://localhost:4000/api
 VITE_API_TIMEOUT = 10000
+VITE_GOOGLE_CLIENT_ID = 303226217369-pjduap0b4badkv47m4m6r08oi9jgbqd3.apps.googleusercontent.com
