--- a/EVMS_BE/.env.example
+++ b/EVMS_BE/.env.example
@@ -1,4 +1,21 @@
-﻿PORT=4000
+﻿# Server Configuration
+PORT=4000
 NODE_ENV=development
+
+# Database Configuration
 MONGODB_URI=mongodb+srv://<swp391_group5>:<majLVQxiHIyHqbKs123>@<cluster>.mongodb.net
 DB_NAME=evms
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
+JWT_EXPIRES_IN=7d
+
+# Cloudinary Configuration (for file uploads)
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+
+# Email Configuration (for forgot password)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-gmail-app-password-16-characters
+FRONTEND_URL=http://localhost:5173
