--- a/EVMS_BE/package.json
+++ b/EVMS_BE/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
